test/bad/functions/args01.px

func f(x: Int, y: Char): Bool def
    return x == y

f()
